@@ -2,7 +2,7 @@ package com.floney.floney.user.service;
 
 import com.floney.floney.book.entity.Book;
 import com.floney.floney.book.repository.BookRepository;
-import com.floney.floney.book.repository.BookUserCustomRepository;
+import com.floney.floney.book.repository.BookUserRepository;
 import com.floney.floney.common.dto.DelegateResponse;
 import com.floney.floney.common.exception.user.NotFoundSubscribeException;
 import com.floney.floney.user.dto.constant.SubscribeStatus;
@@ -28,7 +28,7 @@ import static com.floney.floney.common.constant.Subscribe.SUBSCRIBE_MAX_BOOK;
 public class SubscribeService {
     private final SubscribeRepository subscribeRepository;
     private final UserRepository userRepository;
-    private final BookUserCustomRepository bookUserRepository;
+    private final BookUserRepository bookUserRepository;
     private final BookRepository bookRepository;
 
     @Transactional
@@ -53,7 +53,7 @@ public class SubscribeService {
     @Transactional(readOnly = true)
     public SubscribeResponse getSubscribe(User user) {
         Subscribe subscribe = subscribeRepository.findSubscribeByUser(user)
-                .orElseThrow(() -> new NotFoundSubscribeException(user.getEmail()));
+            .orElseThrow(() -> new NotFoundSubscribeException(user.getEmail()));
         return SubscribeResponse.of(subscribe);
     }
 
@@ -86,20 +86,20 @@ public class SubscribeService {
 
         // 사용자의 구독 혜택을 받는 중인 가계부 위임을 처리하고 결과를 반환
         return books.stream()
-                .filter(this::isOverSubscribeLimit)
-                .map(this::delegateOwner)
-                .collect(Collectors.toList());
+            .filter(this::isOverSubscribeLimit)
+            .map(this::delegateOwner)
+            .toList();
     }
 
     // 구독 혜택을 받는 가게부(가계부원 2명 이상)
     private boolean isOverSubscribeLimit(final Book book) {
-        final long bookUserCount = bookUserRepository.countInBook(book);
+        final int bookUserCount = bookUserRepository.countByBookExclusively(book);
         return bookUserCount > SUBSCRIBE_MAX_BOOK.getValue();
     }
 
     private DelegateResponse delegateOwner(Book book) {
         // 구독을 한 다른 멤버 조회
-        Optional<User> wantDelegateWhoSubscribe = bookUserRepository.findRandomBookUserWhoSubscribe(book);
+        Optional<User> wantDelegateWhoSubscribe = bookUserRepository.findRandomBookUserWhoSubscribeExclusively(book);
 
         // 존재할 경우 방장 위임
         if (wantDelegateWhoSubscribe.isPresent()) {
